# storage/api-docs/api-docs.json
@@ -3,7 +3,7 @@
     "info": {
         "title": "Laravel API",
         "description": "API documentation for the Laravel project",
-        "version": "1.0.2"
+        "version": "1.0.0"
     },
     "servers": [
         {
@@ -95,61 +95,23 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Your endpoint summary",
-                "description": "Your endpoint description",
-                "operationId": "yourOperationId",
-                "parameters": [
-                    {
-                        "name": "X-CSRF-TOKEN",
-                        "in": "header",
-                        "description": "Bearer token",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": "Bearer"
-                        }
-                    },
-                    {
-                        "name": "Authorization",
-                        "in": "header",
-                        "description": "Access token",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": "Bearer {access_token}"
-                        }
-                    },
-                    {
-                        "name": "Content-Type",
-                        "in": "header",
-                        "description": "Content type",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": "application/json"
-                        }
-                    },
-                    {
-                        "name": "Accept",
-                        "in": "header",
-                        "description": "Accepted response type",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "example": "application/json"
-                        }
-                    }
-                ],
+                "summary": "Fetch authenticated user details",
+                "operationId": "62fcbe85580bb2593f69a12a02d62cdf",
                 "responses": {
                     "200": {
-                        "description": "Successful response",
+                        "description": "User details",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "data": {
-                                            "type": "string",
-                                            "example": "Your response data"
+                                        "id": {
+                                            "type": "integer"
+                                        },
+                                        "name": {
+                                            "type": "string"
+                                        },
+                                        "email": {
+                                            "type": "string"
                                         }
                                     },
                                     "type": "object"
@@ -157,16 +119,27 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "Bad request"
-                    },
                     "401": {
-                        "description": "Unauthorized"
-                    },
-                    "500": {
-                        "description": "Internal server error"
+                        "description": "Unauthenticated"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "sanctum": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "sanctum",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header"
             }
         }
     }
